Fixed Dropdown Dark mode UI and Searchbar Results Placement (#1329)
* Adding exact wikipedia's theme


* one thing missed to fix


* Fixed searchbar placement and dropdown Dark UI


---------

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -84,7 +84,10 @@
 #articleListWithHeader {
     position: absolute;
     top: 0;
-    left: 5%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 12px;
     padding-right: 12px;
     background: lightblue;
@@ -144,6 +147,25 @@ iframe {
 
 
 /* App theme: dark */
+
+/* Dark dropdown styles for homepage */
+.dark select.form-control {
+    background-color: #fff;
+}
+
+.dark select.form-control option {
+    background-color: #000;
+    color: #e0e0e0;
+}
+
+/* Selected option */
+.dark select.form-control option:checked {
+    background-color: #333;
+}
+
+.dark select.form-control option:hover {
+    background-color: #222;
+}
 
 .dark header, .dark #cachingAssets, .dark #about, .dark #configuration, .dark #welcomeText, .dark #articleListWithHeader,
 .dark #alertBoxHeader, .dark footer:not([class=_light]), .dark img {
